@@ -73,78 +73,11 @@
 class MarbleDirs
 {
  public:
-    static QString path( const QString& path ) 
-    { 
-        //MARBLE_DATA_PATH is a compiler define set by cmake
-        QString marbleDataPath(MARBLE_DATA_PATH);
-//        qDebug(marbleDataPath.toLocal8Bit() + " <-- marble data path");
-        QString fullpath;
-#ifdef Q_OS_MACX
-        //
-        // On OSX lets try to find any file first in the bundle
-        // before branching out to home and sys dirs
-        //
-        CFURLRef myBundleRef = CFBundleCopyBundleURL(CFBundleGetMainBundle());
-        CFStringRef myMacPath = CFURLCopyFileSystemPath(myBundleRef, kCFURLPOSIXPathStyle);
-        const char *mypPathPtr = CFStringGetCStringPtr(myMacPath,CFStringGetSystemEncoding());
-        CFRelease(myBundleRef);
-        CFRelease(myMacPath);
-        QString myPath(mypPathPtr);
-        //do some magick so that we can still find data dir if
-        //marble was not built as a bundle
-        if (myPath.contains(".app"))  //its a bundle!
-        {
-          fullpath = myPath + "/Contents/MacOS/resources/data/";
-        }
-        else //must be running from a non .app bundle
-        {
-          fullpath = QApplication::applicationDirPath()+"/../share/data/";
-        }
-        //qDebug("KatlasDirs path calculated as: " + fullpath.toLocal8Bit());
-        fullpath += QDir::separator() + path;
-        if ( QFile::exists( fullpath ) ){
-            return QDir( fullpath ).canonicalPath(); 
-        }
-#endif
-        QString  systempath  = systemDir() + "/" + path;	// system path
-        QString  localpath = localDir() + "/" + path;	// local path
-        QString  unixpath  = unixDir() + "/" + path;	// unix path
-	
-        fullpath = unixpath;
-        if ( QFile::exists( localpath ) )
-            fullpath = localpath;
-        else if ( QFile::exists( systempath ) )
-            fullpath = systempath;
+    static QString path( const QString& path );
 
-        return QDir( fullpath ).canonicalPath(); 
-    }
+    static QString systemDir(); 
 
-    static QString systemDir() 
-    {
-        return QDir( qApp->applicationDirPath() 
-#if defined(Q_OS_MACX)
-                     + QLatin1String( "/Resources/data" )
-#elif defined(Q_OS_UNIX)
-                     + QLatin1String( "/../share/apps/marble/data" )
-#elif defined(Q_OS_WIN)
- #if defined(QTONLY)
-                     + QLatin1String( "/data" )
- #else
-                     + QLatin1String( "/../share/apps/marble/data" )
- #endif
-#endif
-                     ).canonicalPath();
-    }
-
-    static QString localDir() 
-    { 
-        return QString( QDir::homePath() + "/.marble/data" ); // local path
-    }
-
-    static QString unixDir()
-    {
-        return QString( "/usr/local/share/apps/marble/data" );	// unix system path
-    }
+    static QString localDir(); 
 };
 
 
