@@ -1,3 +1,11 @@
+2007-08-15  Torsten Rahn  <rahn@kde.org>
+
+    * src/lib/maptheme.cpp: 
+    * src/lib/MarbleDirs.cpp: 
+    Making MarbleDirs.h uninlined by adding MarbleDirs.cpp
+    as suggested by Pino Toscano.
+    Getting rid of unixDir.
+
 2007-08-15 Carlos Licea <>
     *Integration:
     Finished the integration of the flat projection.
